--- a/css/cart.css
+++ b/css/cart.css
@@ -23,7 +23,6 @@ body, ul {
     font-size: 18px; /* Adjust font size to your preference */
 }
 
-
 /* Style the eDeliverX logo */
 .navbar-left {
     font-size: 1.5em; /* Adjust font size to your preference */
@@ -43,16 +42,15 @@ body, ul {
 /* Center the cart and payment form on the page */
 .main-content {
     display: flex;
-    justify-content: center;
+    justify-content: space-between; /* Adjust to space between the two elements */
     align-items: center; /* Center items vertically */
     margin-top: 20px;
 }
 
 /* Style for the cart */
 .cart-items {
-    width: 100%;
-    max-width: 800px; /* Adjust the maximum width as needed */
-    margin: 20px auto; /* Center the cart horizontally with top and bottom margin */
+    width: calc(50% - 20px); /* Adjust the width to take up half of the available space */
+    margin: 20px 10px; /* Center the cart horizontally with top and bottom margin */
     padding: 20px;
     background-color: #ffffff;
     border: 1px solid #dee2e6;
@@ -66,7 +64,7 @@ body, ul {
 /* Style the individual cart item */
 .cart-item {
     width: 100%;
-    max-width: 600px; /* Set a maximum width for the cart items */
+    max-width: 480px; /* Set a maximum width for the cart items */
     margin-bottom: 20px;
     border: 1px solid #dee2e6;
     border-radius: 8px;
@@ -116,7 +114,6 @@ body, ul {
     background-color: #c82333;
 }
 
-
 /* Style the order summary section */
 #orderSummary {
     margin-top: 20px;
@@ -134,11 +131,8 @@ body, ul {
 }
 
 #paymentForm {
-    width: 100%;
-    max-width: 400px; /* Adjust as needed */
-    margin-left: 20px; /* Add space between cart and payment form */
-    margin-right: 50px;
-    margin-bottom: 460px;
+    width: calc(50% - 20px); /* Adjust the width to take up half of the available space */
+    margin: 20px 10px; /* Add space between cart and payment form */
     background-color: #ffffff;
     border: 1px solid #dee2e6;
     border-radius: 8px;
