--- a/css/account.css
+++ b/css/account.css
@@ -49,6 +49,12 @@
     text-decoration: none;
   }
   
+/* Reset default margin and padding */
+body, ul {
+  margin: 0;
+  padding: 0;
+}
+
 /* Style the navbar */
 .navbar {
   background-color: #041d2e; /* Blue background color */
@@ -68,7 +74,43 @@
   font-size: 18px; /* Adjust font size to your preference */
 }
 
-  
-.navbar a:hover {
-    text-decoration: underline;
+/* Style the search bar */
+.search-bar {
+  padding: 10px; /* Increase padding */
+  border: none;
+  border-radius: 8px; /* Increase border radius */
+  width: 250px; /* Increase width */
 }
+
+/* Style the search button */
+.search-button {
+  background-color: yellow; /* Blue background color */
+  color: rgb(0, 0, 0); /* Text color */
+  border: none;
+  padding: 10px 10px; /* Adjust padding for both top/bottom and left/right */
+  border-radius: 8px; /* Rounded corners */
+  cursor: pointer;
+  font-size: 12px; /* Adjust font size */
+}
+
+.search-button:hover {
+  background-color: yellow; /* Darker blue on hover */
+}
+
+
+/* Style the eDeliverX logo */
+.navbar-left {
+  font-size: 1.5em; /* Adjust font size to your preference */
+}
+
+.navbar-right a {
+  display: inline-block;
+  background-color: yellow;
+  color: black; /* Text color */
+  padding: 10px 20px; /* Increase padding for both top/bottom and left/right */
+  margin-right: 20px;
+  border-radius: 8px; /* Increase border radius */
+  text-decoration: none;
+  font-size: 18px; /* Adjust font size to your preference */
+}
+
