Added Sign In, Sign Up, Forgot your password webpages, fixed some css and added Footer

--- a/css/home.css
+++ b/css/home.css
@@ -46,7 +46,6 @@ body, ul {
     background-color: yellow; /* Darker blue on hover */
 }
 
-
 /* Style the eDeliverX logo */
 .navbar-left {
     font-size: 1.5em; /* Adjust font size to your preference */
@@ -63,40 +62,72 @@ body, ul {
     font-size: 18px; /* Adjust font size to your preference */
 }
 
+/* Style the title */
+.title {
+    text-align: center;
+    margin-top: 20px;
+}
 
+/* Style the images */
+.image-container {
+    display: flex;
+    justify-content: center;
+}
 
-        /* Style the title */
-        .title {
-            text-align: center;
-            margin-top: 20px;
-        }
+.image-container img {
+    width: 1000px; /* Updated image width */
+    height: auto;
+    margin: 10px;
+}
 
-        /* Style the images */
-        .image-container {
-            display: flex;
-            justify-content: center;
-        }
+/* Style the "About Us" section */
+.about-us {
+    display: flex;
+    align-items: flex-start; /* Align text to the top */
+}
 
-        .image-container img {
-            width: 1000px; /* Updated image width */
-            height: auto;
-            margin: 10px;
-        }
+.about-us-left {
+    flex: 3;
+    margin-left: 80px; /* Add margin to the left */
+    margin-top: 100px;
+    font-size: large;
+}
 
-        /* Style the "About Us" section */
-        .about-us {
-            display: flex;
-            align-items: flex-start; /* Align text to the top */
-        }
+.about-us-right {
+    flex: 8;
+    padding: 20px; /* Reduced padding */
+}
 
-        .about-us-left {
-            flex: 3;
-            margin-left: 80px; /* Add margin to the left */
-            margin-top: 100px;
-            font-size: large;
-        }
+/* Style the footer */
+.footer {
+    background-color: #041d2e;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    margin-top: 50px; /* Add margin to the top */
+}
 
-        .about-us-right {
-            flex: 8;
-            padding: 20px; /* Reduced padding */
-        }
+.contact-info {
+    margin-bottom: 20px;
+}
+
+.contact-info h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.contact-info p {
+    font-size: 14px;
+    margin: 5px 0;
+}
+
+.footer a {
+    color: white; /* Set the link color to white */
+    text-decoration: none; /* Remove underline */
+    transition: background-color 0.3s ease; /* Add transition effect for background color */
+}
+
+.footer a:hover {
+    background-color: white; /* Set the background color to white on hover */
+    color: #041d2e; /* Set the text color to the desired highlighted color */
+}
