--- a/css/cart.css
+++ b/css/cart.css
@@ -49,6 +49,8 @@ body, ul {
 
 /* Style for the cart */
 .cart-items {
+    top: 0;
+    left: 0;
     width: calc(50% - 20px); /* Adjust the width to take up half of the available space */
     margin: 20px 10px; /* Center the cart horizontally with top and bottom margin */
     padding: 20px;
@@ -131,6 +133,8 @@ body, ul {
 }
 
 #paymentForm {
+    top: 0;
+    right: 0;
     width: calc(50% - 20px); /* Adjust the width to take up half of the available space */
     margin: 20px 10px; /* Add space between cart and payment form */
     background-color: #ffffff;
@@ -178,4 +182,38 @@ body, ul {
 
 #payButton:hover {
     background-color: #218838;
+}
+
+/* Style the footer */
+.footer {
+    background-color: #041d2e;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    margin-top: 50px; /* Add margin to the top */
+}
+
+.contact-info {
+    margin-bottom: 20px;
+}
+
+.contact-info h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.contact-info p {
+    font-size: 14px;
+    margin: 5px 0;
+}
+
+.footer a {
+    color: white; /* Set the link color to white */
+    text-decoration: none; /* Remove underline */
+    transition: background-color 0.3s ease; /* Add transition effect for background color */
+}
+
+.footer a:hover {
+    background-color: white; /* Set the background color to white on hover */
+    color: #041d2e; /* Set the text color to the desired highlighted color */
 }
