--- a/css/products.css
+++ b/css/products.css
@@ -122,3 +122,38 @@ li p {
 }
 
 
+
+/* Style the footer */
+.footer {
+    background-color: #041d2e;
+    color: white;
+    padding: 20px;
+    text-align: center;
+    margin-top: 50px; /* Add margin to the top */
+}
+
+.contact-info {
+    margin-bottom: 20px;
+}
+
+.contact-info h2 {
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: white;
+}
+
+.contact-info p {
+    font-size: 14px;
+    margin: 5px 0;
+}
+
+.footer a {
+    color: white; /* Set the link color to white */
+    text-decoration: none; /* Remove underline */
+    transition: background-color 0.3s ease; /* Add transition effect for background color */
+}
+
+.footer a:hover {
+    background-color: white; /* Set the background color to white on hover */
+    color: #041d2e; /* Set the text color to the desired highlighted color */
+}
